--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-scroll-motion": "^0.3.2",
     "react-slick": "^0.29.0",
     "react-stately": "^3.19.0",
     "react-toasts": "^3.0.6",
